--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,7 @@
     <title>Create-Table-Generator</title>
 </head>
 <body>
-    <h1>
-        Hello, world 
-    </h1>
 
-
-    <script src="./index.js"></script>
+    <script src="./JavaScript/index.js"></script>
 </body>
 </html>
